[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redis-lock-py"
version = "0.2.0"
authors = [
    { name = "Minjae Park", email = "miintto.log@gmail.com" },
]
description = "Redis distributed lock implementation for Python based on Pub/Sub messaging"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
classifiers=[
    'Development Status :: 3 - Alpha',
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies=[
    "redis>=4.2.0"
]

[project.urls]
Homepage = "https://github.com/miintto/redis-lock-py"
