[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redis-lock-py"
version = "1.1.0"
authors = [
    { name = "Minjae Park", email = "miintto.log@gmail.com" },
]
description = "Redis distributed lock implementation for Python based on Pub/Sub messaging"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies=[
    "redis>=5.2.0"
]

[project.urls]
Homepage = "https://github.com/miintto/redis-lock-py"

[project.optional-dependencies]
test = [
    "pytest==7.2.1",
    "pytest-asyncio==0.20.3",
    "coverage==7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/redis_lock"]
