[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redis-lock-py"
version = "1.2.1"
authors = [
    { name = "Minjae Park", email = "miintto.log@gmail.com" },
]
description = "Redis distributed lock implementation for Python based on Pub/Sub messaging"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies=[
    "redis>=7.0.1"
]

[project.urls]
Homepage = "https://github.com/miintto/redis-lock-py"

[project.optional-dependencies]
test = [
    "coverage>=7.11.3",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["redis_lock"]
